fix: mobile keyboard popup on field focus

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -64,7 +64,8 @@
                                            placeholder="Origin"
                                            class="hover:drop-shadow-md transition-all z-40 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
                                            aria-label="Select Origin"
-                                           required>
+                                           required
+                                           readonly>
                                     <!-- AIRPORT LIST -->
                                     <div id="airports-list-origin"
                                          class="absolute z-30 hidden w-full p-4 pt-8 overflow-hidden bg-white border-2 top-1/2 rounded-b-3xl drop-shadow-md h-72">
@@ -84,7 +85,8 @@
                                            placeholder="Destination"
                                            class="hover:drop-shadow-md transition-all caret-transparent z-20 relative w-full h-12 px-4 rounded-full border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:outline-0 focus:ring-0 focus:border-primary drop-shadow-sm"
                                            aria-label="Select Destination"
-                                           required>
+                                           required
+                                           readonly>
                                     <!-- AIRPORT LIST -->
                                     <div id="airports-list-destination"
                                          class="absolute z-10 hidden w-full p-4 pt-8 overflow-hidden bg-white border-2 top-1/2 rounded-b-3xl drop-shadow-md h-72">
@@ -106,7 +108,8 @@
                                            placeholder="Outbound Date"
                                            data-id="datetime"
                                            aria-label="Outbound date"
-                                           required>
+                                           required
+                                           readonly>
                                 </div>
                                 <!-- RETURN DATE -->
                                 <div id="flatpickr-date-return-container"
@@ -118,7 +121,8 @@
                                            placeholder="Return Date"
                                            data-id="datetime"
                                            aria-label="Return date"
-                                           required>
+                                           required
+                                           readonly>
                                 </div>
                                 <!-- PASSENGERS -->
                                 <select name="passengers"
