fix: overflowing img bug

--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 {% block content %}
     <!-- COVER IMAGE -->
-    <div class="relative flex items-center w-screen overflow-hidden sm:max-h-80">
+    <div class="relative flex items-center overflow-hidden sm:max-h-80">
         <div class="absolute w-full h-full opacity-50 bg-gradient-to-r from-40% from-primary to-fuchsia-500"></div>
         <img class="object-cover w-full h-full"
              src="{% static 'img/blog-cover.webp' %}"
