--- a/templates/blog/blog-detail.html
+++ b/templates/blog/blog-detail.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 {% block content %}
     <!-- COVER IMAGE -->
-    <div class="relative flex items-center w-screen overflow-hidden sm:max-h-80">
+    <div class="relative flex items-center overflow-hidden sm:max-h-80">
         <div class="absolute w-full h-full opacity-50 bg-gradient-to-r from-40% from-primary to-fuchsia-500"></div>
         <img class="object-cover w-full h-full" src="{{ post.cover_image.url }}" alt="{{post.alt_text}}">
         <h1 class="container absolute px-5 text-xl font-bold text-center text-white -translate-x-1/2 sm:text-4xl left-1/2">
