fix: add card name maxlength input

--- a/templates/core/checkout.html
+++ b/templates/core/checkout.html
@@ -42,6 +42,7 @@
                            class="hover:drop-shadow-md transition-all col-span-2 h-12 px-4 rounded-full  border-gray-300 bg-white  focus:drop-shadow-md border-[1px] focus:border-primary focus:outline-0 focus:ring-0 flex-1"
                            placeholder="Name on card"
                            minlength="1"
+                           maxlength="100"
                            aria-label="Name on card"
                            required>
                     <!-- CARD NUMBER -->
