style: add cursor pointer to fare selection

--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -126,7 +126,7 @@
                                 <div data-leg="{{ leg }}"
                                      data-flight-number="{{ flight.flight_number }}"
                                      data-fare-type="Standard"
-                                     class="p-4 text-center bg-primary rounded-xl">
+                                     class="p-4 text-center cursor-pointer bg-primary rounded-xl">
                                     <p class="text-2xl font-bold leading-4 text-white">€{{ flight.price }}</p>
                                     <p class="text-sm font-light text-white">per person</p>
                                 </div>
@@ -156,7 +156,7 @@
                                 <div data-leg="{{ leg }}"
                                      data-flight-number="{{ flight.flight_number }}"
                                      data-fare-type="Plus"
-                                     class="p-4 text-center bg-primary rounded-xl">
+                                     class="p-4 text-center cursor-pointer bg-primary rounded-xl">
                                     <p class="text-2xl font-bold leading-4 text-white">€{{ flight.plus_fare }}</p>
                                     <p class="text-sm font-light text-white">per person</p>
                                 </div>
@@ -187,7 +187,7 @@
                                 <div data-leg="{{ leg }}"
                                      data-flight-number="{{ flight.flight_number }}"
                                      data-fare-type="Premium"
-                                     class="p-4 text-center bg-primary rounded-xl">
+                                     class="p-4 text-center cursor-pointer bg-primary rounded-xl">
                                     <p class="text-2xl font-bold leading-4 text-white">€{{ flight.premium_fare }}</p>
                                     <p class="text-sm font-light text-white">per person</p>
                                 </div>
