fix: fix overflow bug

--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -3,7 +3,7 @@
     Register
 {% endblock title %}
 {% block content %}
-    <div class="flex items-center w-screen py-12 m-auto mx-auto bg-gray-100">
+    <div class="flex items-center w-full py-12 m-auto mx-auto bg-gray-100">
         <div class="container flex justify-center px-5 mx-auto">
             <div class="container flex flex-col justify-center w-full max-w-xl p-6 mx-auto bg-white sm:p-12 rounded-3xl drop-shadow-lg">
                 <!-- SIGN UP HEADER -->
