style: change styles for airport dropdown list

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -71,7 +71,9 @@
                                          class="absolute z-30 hidden w-full p-4 pt-8 overflow-hidden bg-white border-2 top-1/2 rounded-b-3xl drop-shadow-md h-72">
                                         <div class="h-full overflow-auto">
                                             {% for airport in airports %}
-                                                <div class="py-2 text-sm text-text airport-list-item">{{ airport }}</div>
+                                                <div class="px-4 py-2 text-sm rounded-full cursor-pointer text-text hover:bg-gray-100 airport-list-item">
+                                                    {{ airport }}
+                                                </div>
                                                 <hr>
                                             {% endfor %}
                                         </div>
@@ -92,7 +94,9 @@
                                          class="absolute z-10 hidden w-full p-4 pt-8 overflow-hidden bg-white border-2 top-1/2 rounded-b-3xl drop-shadow-md h-72">
                                         <div class="h-full overflow-auto">
                                             {% for airport in airports %}
-                                                <div class="py-2 text-sm text-text airport-list-item">{{ airport }}</div>
+                                                <div class="px-4 py-2 text-sm rounded-full cursor-pointer text-text hover:bg-gray-100 airport-list-item">
+                                                    {{ airport }}
+                                                </div>
                                                 <hr>
                                             {% endfor %}
                                         </div>
