dev: add S3 storage backend

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -86,7 +86,7 @@
                 <!-- HEADER LOGO -->
                 <div class="flex items-center flex-1 w-20 basis-['250px']">
                     <a href="{% url 'home-page' %}" class="w-20">
-                        <img src="/static/img/flyux-logo.png"
+                        <img src="{% static 'img/flyux-logo.png' %}"
                              alt="'flyUX' logo: A minimalist logo consisting of 'flyUX' text, using a modern sans-serif font, with a small illustrated airplane sweeping under the text to convey travel-inspired design."
                               />
                     </a>
