--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="relative">
                 <img class="absolute bottom-0"
-                     src="/static/img/planes-home.svg"
+                     src="{% static 'img/planes-home.svg' %}"
                      alt="Backdrop image showing illustrated airplanes sweeping across the background with short dashed lines trailing from behind in a smooth arc">
             </div>
             <!-- OUTER CONTAINER FOR FORM -->
