--- a/templates/core/passenger-details.html
+++ b/templates/core/passenger-details.html
@@ -172,5 +172,6 @@
     </div>
 {% endblock content %}
 {% block scripts %}
+{{ block.super }}
     <script src="{% static 'js/passenger-details.js' %}"></script>
 {% endblock scripts %}
