--- a/templates/core/search-results.html
+++ b/templates/core/search-results.html
@@ -57,6 +57,8 @@
     </div>
 {% endblock content %}
 {% block scripts %}
+{{ block.super }}
+
     <script src="{% static 'js/alt-date-select.js' %}"></script>
     <script src="https://unpkg.com/htmx.org@1.9.3"
             integrity="sha384-lVb3Rd/Ca0AxaoZg5sACe8FJKF0tnUgR2Kd7ehUOG5GCcROv5uBIZsOqovBAcWua"
