--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -159,5 +159,6 @@
     </div>
 {% endblock content %}
 {% block scripts %}
+{{ block.super }}
     <script src="{% static 'js/flight_search.js' %}"></script>
 {% endblock scripts %}
